[tool.poetry]
name = "rc-circuit"
version = "0.1.0"
description = ""
authors = ["Nicolás Pozas <Pozas91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rpi-gpio = "^0.7.1"
pi-rc522 = "^2.3.0"
influxdb3-python = "^0.3.6"
python-dotenv = "^1.0.1"
numpy = "^1.19.5-1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
